--- a/mos_stm32.yml
+++ b/mos_stm32.yml
@@ -1,5 +1,5 @@
 libs:
-  - origin: https://github.com/mongoose-os-libs/miniz
+  - location: https://github.com/mongoose-os-libs/miniz
 
 init_after:
   - miniz
